# Tracker

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: benchmark.yml  build.yml  test.yml
Application/: CMakeLists.txt
Tracker/: CMakeLists.txt
Tracker-app/: CMakeLists.txt
Tracker-app/src/: main.cpp
Tracker-lib/: CMakeLists.txt
Tracker-lib/src/: pch.h
Tracker-lib/src/Core/: Core.cpp  Core.h
Tracker-lib/src/Custom/NullLineEdit/: NullLineEdit.cpp  NullLineEdit.h
Tracker-lib/src/DatabaseManager/: AttachedCreator.h  Creator.h  DatabaseManager.cpp  DatabaseManager.h  UpdateWork.h  Work.h
Tracker-lib/src/RequestsManager/: RequestsManager.cpp  RequestsManager.h
Tracker-lib/src/UI/AddCreatorDialog/: AddCreatorDialog.cpp  AddCreatorDialog.h  AddCreatorDialog.ui
Tracker-lib/src/UI/AddWorkDialog/: AddWorkDialog.cpp  AddWorkDialog.h  AddWorkDialog.ui
Tracker-lib/src/UI/BrowsePage/: BrowsePage.cpp  BrowsePage.h  BrowsePage.ui
Tracker-lib/src/UI/BrowseTab/: BrowseTab.cpp  BrowseTab.h  BrowseTab.ui
Tracker-lib/src/UI/CreatorPage/: CreatorPage.cpp  CreatorPage.h  CreatorPage.ui
Tracker-lib/src/UI/Dialog/: AddWorkDialog.ui  SearchCreatorDialog.cpp  SearchCreatorDialog.h  SearchCreatorDialog.ui
Tracker-lib/src/UI/MainWindow/: MainWindow.cpp  MainWindow.h  MainWindow.ui
Tracker-lib/src/UI/MangaDexPage/: MangaDexPage.cpp  MangaDexPage.h  MangaDexPage.ui
Tracker-lib/src/UI/MangaUpdatesPage/: MangaUpdatesPage.cpp  MangaUpdatesPage.h  MangaUpdatesPage.ui
Tracker-lib/src/UI/Page/: BrowsePage.cpp  BrowsePage.h  BrowsePage.ui  CreatorPage.cpp  CreatorPage.h  CreatorPage.ui  HomePage.cpp  HomePage.h  HomePage.ui  Page.h  UpdatePage.cpp  UpdatePage.h  WorkPage.cpp  WorkPage.h  WorkPage.ui
Tracker-lib/src/UI/ReleaseEntry/: ReleaseEntry.cpp  ReleaseEntry.h  ReleaseEntry.ui
Tracker-lib/src/UI/ReleasesPage/: ReleasesPage.cpp  ReleasesPage.h  ReleasesPage.ui
Tracker-lib/src/UI/SearchCreatorDialog/: SearchCreatorDialog.cpp  SearchCreatorDialog.h  SearchCreatorDialog.ui
Tracker-lib/src/UI/UpdateEntry/: UpdateEntry.cpp  UpdateEntry.h
Tracker-lib/src/UI/UpdatePage/: UpdatePage.cpp  UpdatePage.h  UpdatePage.ui
Tracker-lib/src/UI/UpdateTab/: UpdateEntry.h  UpdateTab.cpp  UpdateTab.h  UpdateTab.ui
Tracker-lib/src/UI/WorkPage/: WorkPage.cpp  WorkPage.h  WorkPage.ui
Tracker-lib/src/Utility/: Utility.cpp  Utility.h
Tracker/src/: pch.h
Tracker/src/DatabaseManager/: Creator.h  DatabaseManager.cpp  DatabaseManager.h  Work.h
Tracker/src/UI/AddWorkDialog/: AddWorkDialog.cpp  AddWorkDialog.ui
Tracker/src/UI/CreatorPage/: CreatorPage.ui
Tracker/src/UI/MainWindow/: MainWindow.cpp  MainWindow.h
Tracker/src/UI/MangaDexPage/: MangaDexPage.h
Tracker/src/UI/MangaUpdatesPage/: MangaUpdatesPage.cpp  MangaUpdatesPage.h  MangaUpdatesPage.ui
Tracker/src/UI/UpdatePage/: UpdatePage.cpp
Tracker/src/UI/WorkPage/: WorkPage.h  WorkPage.ui
benchmarks/: CMakeLists.txt
benchmarks/src/: DatabaseManagerBenchmark.cpp
resources/: resources.qrc  resources.rc
resources/stylesheets/: stylesheet.qss
src/: CMakeLists.txt  main.cpp
src/AddCreatorDialog/: AddCreatorDialog.ui
src/AddWorkDialog/: AddWorkDialog.cpp  AddWorkDialog.h  AddWorkDialog.ui
src/AttachCreatorDialog/: AttachCreatorDialog.cpp  AttachCreatorDialog.h  AttachCreatorDialog.ui
src/DatabaseManager/: Creator.h  DatabaseManager.cpp  DatabaseManager.h  FilterWork.h  UpdateWork.h  Work.h
src/MainWindow/: MainWindow.cpp  MainWindow.h  MainWindow.ui
src/RequestsManager/: RequestsManager.cpp  RequestsManager.h
src/RequestsManagers/MangaDexManager/: MangaDexManager.cpp  MangaDexManager.h
src/RequestsManagers/MangaUpdatesManager/: MangaUpdatesManager.cpp  MangaUpdatesManager.h
src/RequestsManagers/RedditManager/: RedditManager.cpp  RedditManager.h
src/UI/AddCreatorDialog/: AddCreatorDialog.cpp  AddCreatorDialog.h
src/UI/AddWorkDialog/: AddWorkDialog.cpp  AddWorkDialog.h  AddWorkDialog.ui
src/UI/AttachCreatorDialog/: AttachCreatorDialog.cpp
src/UI/BrowsePage/: BrowsePage.cpp  BrowsePage.h  BrowsePage.ui
src/UI/CreatorDialog/: CreatorDialog.cpp  CreatorDialog.h  CreatorDialog.ui
src/UI/CreatorPage/: CreatorPage.cpp  CreatorPage.h  CreatorPage.ui
src/UI/MainWindow/: MainWindow.cpp  MainWindow.h  MainWindow.ui
src/UI/MangaDexPage/: MangaDexPage.cpp  MangaDexPage.h
src/UI/MangaUpdatesPage/: MangaUpdatesPage.cpp  MangaUpdatesPage.h  MangaUpdatesPage.ui
src/UI/SearchCreatorDialog/: SearchCreatorDialog.cpp  SearchCreatorDialog.h  SearchCreatorDialog.ui
src/UI/UpdateEntry/: UpdateEntry.cpp
src/UI/UpdatePage/: UpdatePage.cpp  UpdatePage.h  UpdatePage.ui
src/UI/WorkDialog/: WorkDialog.cpp  WorkDialog.h  WorkDialog.ui
src/UI/WorkPage/: WorkPage.cpp  WorkPage.h  WorkPage.ui
src/UpdateEntry/: UpdateEntry.cpp  UpdateEntry.h  UpdateEntry.ui
test/: CMakeLists.txt  DatabaseManagerTest.cpp  TestTest.cpp
tests/: CMakeLists.txt
tests/src/: DatabaseManagerTest.cpp
